Closed Bug 793140 Opened 13 years ago Closed 13 years ago

[b2g-bluetooth] Fixed wrong return value

Categories

(Core :: DOM: Device Interfaces, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla18

People

(Reporter: echou, Assigned: echou)

References

Details

(Whiteboard: [LOE:S])

Attachments

(1 file)

In file BluetoothServiceChildProcess.cpp, there are Set*Internal functions returning NS_OK, however they should return a boolean value. That would cause an error because NS_OK = 0
Assignee: nobody → echou
Whiteboard: [LOE:S]
Attachment #663360 - Flags: review?(kyle)
Attachment #663360 - Flags: review?(kyle) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: