Bug 793140 - [b2g-bluetooth] Fixed wrong return value