dom/bluetooth/ipc/BluetoothServiceChildProcess.cpp
@@ -232,7 +232,7 @@ BluetoothServiceChildProcess::SetPinCodeInternal(
 {
   SendRequest(aRunnable,
               SetPinCodeRequest(nsString(aDeviceAddress), nsString(aPinCode)));
-  return NS_OK;
+  return true;
 }
 
 bool
@@ -243,7 +243,8 @@ BluetoothServiceChildProcess::SetPasskeyInternal(
 {
   SendRequest(aRunnable,
               SetPasskeyRequest(nsString(aDeviceAddress), aPasskey));
-  return NS_OK;
+
+  return true;
 }
 
 bool
@@ -259,7 +260,8 @@ BluetoothServiceChildProcess::SetPairingConfirmationInternal(
     SendRequest(aRunnable,
                 DenyPairingConfirmationRequest(nsString(aDeviceAddress)));
   }
-  return NS_OK;
+
+  return true;
 }
 
 bool
@@ -275,7 +277,8 @@ BluetoothServiceChildProcess::SetAuthorizationInternal(
     SendRequest(aRunnable,
                 DenyAuthorizationRequest(nsString(aDeviceAddress)));
   }
-  return NS_OK;
+
+  return true;
 }
 
 nsresult
